blockml/test/errors/08_model_sql_always_where_calc/e155/e155m.model
model: e155m
sql_always_where_calc: ${unk}  
joins:
- from_view: e155_one
  as: a
